attempting to resolve css color contrast error

--- a/styles/small.css
+++ b/styles/small.css
@@ -60,6 +60,7 @@ header span {
 .navigation {
     display: none;
     background-color: var(--deep-teal);
+    color: white;
 }
 
 .navigation.show {
